<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_light"
    android:orientation="vertical"
    android:weightSum="100">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="10"
        android:background="@color/background"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvInputLang"
            style="@style/TextLang"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@+id/btnChangeLang"
            android:layout_toStartOf="@+id/btnChangeLang"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:onClick="onClickInputLang"
            android:paddingEnd="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingStart="10dp"
            android:scrollHorizontally="true"
            android:text="English" />

        <Button
            android:id="@+id/btnChangeLang"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/ic_exchange"
            android:onClick="onClickChangeLang" />

        <TextView
            android:id="@+id/tvOutputLang"
            style="@style/TextLang"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toEndOf="@+id/btnChangeLang"
            android:layout_toRightOf="@+id/btnChangeLang"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:onClick="onClickOutputLang"
            android:paddingEnd="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingStart="10dp"
            android:scrollHorizontally="true"
            android:text="Russian" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:layout_weight="20"
        android:background="@drawable/border"
        android:orientation="vertical"
        android:weightSum="10">


        <Button
            android:id="@+id/btnClearText"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/ic_clear_24px"
            android:onClick="onClickClear" />


        <com.moggot.multipreter.BackAwareEditText
            android:id="@+id/etText"
            style="@style/Text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="35dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="35dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:background="@null"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="top"
            android:hint="@string/edittext_hint"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress|textEmailSubject|textMultiLine|textNoSuggestions"
            android:scrollHorizontally="false" />
    </RelativeLayout>


    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/root_frame"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="70"
        android:background="@color/background_light"></FrameLayout>
</LinearLayout>


