...


    <string name="az">Azerbaijani</string>
    <string name="sq">Albanian</string>
    <string name="am">Amharic</string>
    <string name="en">English</string>
    <string name="ar">Arabic</string>
    <string name="hy">Armenian</string>
    <string name="af">Africaans</string>
    <string name="eu">Basque</string>
    <string name="ba">Bashkir</string>
    <string name="be">Belarusian</string>
    <string name="bn">Bengali</string>
    <string name="bg">Bulgarian</string>
...
